# funlab-sched

./: README.md  pyproject.toml
docs/: COMPLETION_SUMMARY.md  DEVELOPMENT_GUIDE.md  ENTRY_POINTS_TROUBLESHOOTING.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING_FLOWCHART.md
funlab/sched/: __init__.py  service.py  task.py
funlab/sched/conf/: plugin.toml  task.toml
funlab/sched/templates/: args_dialog.html  tasks.html
